--- a/task-01-Gorbanev.ipynb
+++ b/task-01-Gorbanev.ipynb
@@ -11,25 +11,14 @@
     "count = int(input())\n",
     "array = np.arange(count)\n",
     "#--------------------------\n",
-    "print(\"Массив до значения,задаваемая вами\",array)\n"
+    "print(\"Массив до заданного значения\",array)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Массив из 0:\n",
-      " [0 0 0 0 0]\n",
-      "Массив из 1:\n",
-      " [1 1 1 1 1 1 1 1 1 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#2)\n",
     "#----- YOUR CODE HERE -----\n",
@@ -49,14 +38,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "2D массив где по диагонали присвоено значение Pi:\n",
-      " [[3.14159265 0.         0.         0.         0.        ]\n",
-      " [0.         3.14159265 0.         0.         0.        ]\n",
-      " [0.         0.         3.14159265 0.         0.        ]\n",
-      " [0.         0.         0.         3.14159265 0.        ]\n",
-      " [0.         0.         0.         0.         3.14159265]]\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -76,15 +58,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "2D массив ,заполненный значением FALSE:\n",
-      " [[False False False False False]\n",
-      " [False False False False False]\n",
-      " [False False False False False]\n",
-      " [False False False False False]\n",
-      " [False False False False False]] \n",
-      "Тип переменной:\n"
-     ]
+     "text": []
     },
     {
      "data": {
@@ -116,12 +90,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Исходный массив:\n",
-      " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]\n",
-      "Новый массив:\n",
-      " [42  1 42  3 42  5 42  7 42  9 42 11 42 13 42 15]\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -148,14 +117,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Исходный массив:\n",
-      " [0 0 0 1 0 0 1 0 1 0 1 1 0 0 1]\n",
-      "Индекды где находяться 1:\n",
-      " [3, 6, 8, 10, 11, 14]\n",
-      "Количество 1:\n",
-      " 6\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -188,11 +150,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Размерность:  3\n",
-      "Количество элементов вдоль каждой размерности: (2, 3, 4)\n",
-      "Количество элементов в массиве: 24\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -210,20 +168,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Исходный массив:\n",
-      " [0 1 2 3 4 5 6 7 8]\n",
-      "Новый массив:\n",
-      " [[0 1 2]\n",
-      " [3 4 5]\n",
-      " [6 7 8]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#8)\n",
     "#----- YOUR CODE HERE -----\n",
@@ -242,25 +187,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите строку,чтобы её суммировать:\n",
-      "4\n",
-      "Введите колонку,чтобы её суммировать:\n",
-      "4\n",
-      "2D массив:\n",
-      " [[7 2 8 8]\n",
-      " [2 7 2 9]\n",
-      " [0 5 8 6]\n",
-      " [7 2 8 3]]\n",
-      "error\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#9)\n",
     "#----- YOUR CODE HERE -----\n",
@@ -289,37 +216,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A:\n",
-      " [[2 8 6 5]\n",
-      " [8 5 5 9]\n",
-      " [0 4 1 1]\n",
-      " [8 6 2 5]\n",
-      " [3 9 3 7]\n",
-      " [0 1 5 4]\n",
-      " [7 0 6 7]] \n",
-      "\n",
-      "B:\n",
-      " [[3 6 8 0 7 7 2]\n",
-      " [2 1 5 4 0 6 3]\n",
-      " [3 4 2 5 2 6 2]\n",
-      " [7 3 0 0 2 0 1]] \n",
-      "\n",
-      "Произведение матриц A*B:\n",
-      " [[ 75  59  68  62  36  98  45]\n",
-      " [112 100  99  45  84 116  50]\n",
-      " [ 18  11  22  21   4  30  15]\n",
-      " [ 77  77  98  34  70 104  43]\n",
-      " [ 85  60  75  51  41  93  46]\n",
-      " [ 45  33  15  29  18  36  17]\n",
-      " [ 88  87  68  30  75  85  33]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#10)\n",
     "#----- YOUR CODE HERE -----\n",
@@ -347,21 +244,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.43177915 0.233412   0.11303712 0.41686081 0.00767863 0.23474754\n",
-      " 0.43167564 0.80916381 0.66357446 0.61406637]\n",
-      "Max value: 0.809\n",
-      "Min value: 0.008\n",
-      "Mean value: 0.396\n",
-      "Median value: 0.424\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#11)\n",
     "#----- YOUR CODE HERE -----\n",
@@ -383,16 +266,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Разность Евклидового расстояния между своей функцией и библеотечной: 0.0\n",
-      "Евклидово расстояние: 10.198039027185569\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#11)\n",
     "#----- YOUR CODE HERE -----\n",
